Unifico todos los archivos a contenido.tex

--- a/2021-1/apunte/main.tex
+++ b/2021-1/apunte/main.tex
@@ -112,6 +112,11 @@
 	\setcounter{chapter}{0}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \cleardoublepage
+
+\input{contenido.tex}
+
+\end{document}
+
 \part{Números enteros y aritmética} 
 %%% CAP1 =================
     \input{Cap.01.tex}
